--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+
+ form {
+  display: flex;
+  flex-direction: column;
+  margin: 16px;
+  margin-bottom: 16px;
+ }
+
+ input {
+  width: 400px;
+ }
+
+main > div {
+  width: 90%;
+  background-color: rgb(243,243,244);
+  padding-left: 16px;
+}
+
+#flat_number_of_guests, #To {
+  margin-bottom: 15px;
+}
