--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,15 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
   </head>
 
-  <body>
+  <body class="d-flex flex-column justify-content-center">
+    <header class="d-flex justify-content-between" style="background-color: rgb(243,243,244)">
+      <h3 class="m-3"><%= link_to("Simple Airbnb", flats_path, class: "text-decoration-none text-dark") %></h3>
+      <button class="btn btn-outline-primary m-3"><%= link_to("Add Flat", new_flat_path, class: "text-decoration-none") %></button>
+    </header>
     <%= yield %>
   </body>
 </html>
